--- a/src/pages/player/PlayerPage.module.css
+++ b/src/pages/player/PlayerPage.module.css
@@ -6,7 +6,7 @@ div.playerContainer {
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  background-color: var(--primary-color);
+  background-color: var(--background);
 }
 
 div.inputContainer {
