--- a/src/pages/game/options/BaseOption.module.css
+++ b/src/pages/game/options/BaseOption.module.css
@@ -1,15 +1,3 @@
-.centerBaseOption:global(.MuiButton-root) {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  width: 70%;
-  height: 40%;
-  word-wrap: break-word;
-  white-space: normal;
-}
-
 div.baseOptionGrid {
   display: grid;
   width: 100%;
@@ -20,9 +8,23 @@ div.baseOptionGrid {
 .baseOptionGridContainer {
   background-color: var(--background);
   box-sizing: border-box;
-  padding: 20px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
+}
+
+button.baseOption:global(.MuiButton-root),
+div.baseOption {
+  font-weight: 600;
+  flex-shrink: 0;
+  border-radius: 4px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+div.baseOption {
+  display: flex;
 }
