--- a/src/pages/game/answering/index.module.css
+++ b/src/pages/game/answering/index.module.css
@@ -86,10 +86,33 @@ div.hostContainer {
       line-height: 1.5;
     }
   }
+
+  div.mediaContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-height: 300px;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+    box-sizing: border-box;
+
+    .videoDisplay {
+      max-height: calc(300px - 2rem);
+    }
+
+    img {
+      width: 100%;
+      object-fit: contain;
+      max-height: 100%;
+    }
+  }
 }
 
 div.playerContainer {
   width: 100vw;
   height: 100vh;
   padding: 20px;
+  box-sizing: border-box;
+  background-color: var(--background);
 }
