--- a/src/pages/home/MainPage.module.css
+++ b/src/pages/home/MainPage.module.css
@@ -7,6 +7,8 @@ div.lobbyContainer {
   width: 100%;
   min-height: 100vh;
   background-color: var(--background);
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 h1.title {
@@ -15,9 +17,9 @@ h1.title {
 }
 
 button.lobbyButton {
-  width: 15vw;
+  width: 100%;
   height: 7vh;
-  min-width: 240px;
+  min-width: 500px;
   font-size: 15px;
 }
 
